deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: random-status-code-deployment
  labels:
    app: rsc
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rsc
  template:
    metadata:
      annotations:
        release: "#{RELEASE}#"
      labels:
        app: rsc
    spec:
      containers:
      - name: random-status-code
        image: #{Azure.ContainerRegistry}#/#{Azure.ContainerImage}#:#{Azure.ContainerTag}#
        ports:
        - containerPort: #{PORT}#
---
apiVersion: v1
kind: Service
metadata:
  name: random-status-code
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: #{PORT}#
  selector:
    app: rsc
